-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.5.2, 6.6.0 Beta3
-
None
-
-
55d23a63a (dev), a1df77c4f (6.6), d51645355 (6.5)
Excessive Qt warning "No audio output" on playing audio/video using WMF backend,
when no audio device is connected to PC.
Can be reproduced, for instance, with standard Quick Media Player example. when playing a video
without an audio output device (e.g. headphones) connected to the PC.
Triggered from MFPlayerSession::addOutputNode()
- relates to
-
QTBUG-116444 [Windows] Qt warning "Failed to retrieve default audio endpoint -2147023728"
-
- Closed
-
For Gerrit Dashboard: QTBUG-117086 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
504301,5 | MFPlayerSession: do not warn on missing audio output | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
504422,2 | MFPlayerSession: do not warn on missing audio output | 6.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
504631,2 | MFPlayerSession: do not warn on missing audio output | 6.5 | qt/qtmultimedia | Status: MERGED | +2 | 0 |